chore: add update wc telemetry release actions

--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -50,15 +50,21 @@ jobs:
         run: yarn install
 
       - name:
-          Run @ibm/telemetry-js-config-generator to regenerate telemetry config
-          file
+          Run @ibm/telemetry-js-config-generator to regenerate ibm-products telemetry config file
         if: github.event.inputs.dry-run == 'true'
         working-directory: ./packages/ibm-products
         run: |
           yarn telemetry-config
 
+      - name:
+          Run @ibm/telemetry-js-config-generator to regenerate telemetry ibm-products-web-components config file
+        if: github.event.inputs.dry-run == 'true'
+        working-directory: ./packages/ibm-products-web-components
+        run: |
+          yarn telemetry-config
+
       # This can be removed once @ibm/telemetry-js-config-generator has params to set the js scope
-      - name: Add js scope to telemetry config
+      - name: Add js scope to ibm-products telemetry config
         if: github.event.inputs.dry-run == 'true'
         working-directory: ./packages/ibm-products
         run: |
@@ -69,7 +75,22 @@ jobs:
             echo "Mirror is clean, exiting..."
           else
             git add telemetry.yml
-            git commit -m "chore(telemetry): update telemetry config"
+            git commit -m "chore(telemetry): update ibm-products telemetry config"
+            git push origin
+          fi
+
+      - name: Add js scope to ibm-products-web-components telemetry config
+        if: github.event.inputs.dry-run == 'true'
+        working-directory: ./packages/ibm-products-web-components
+        run: |
+          echo "  js:
+              functions: {}
+              tokens: null" >> telemetry.yml
+          if [ -z "$(git status --porcelain)" ]; then
+            echo "Mirror is clean, exiting..."
+          else
+            git add telemetry.yml
+            git commit -m "chore(telemetry): update ibm-products-web-components telemetry config"
             git push origin
           fi
 
