--- a/packages/ibm-products-styles/package.json
+++ b/packages/ibm-products-styles/package.json
@@ -45,7 +45,7 @@
     "test": "jest --colors"
   },
   "devDependencies": {
-    "chalk": "^4.1.2",
+    "chalk": "4.1.2",
     "copyfiles": "^2.4.1",
     "cross-env": "^10.0.0",
     "glob": "^11.0.1",
