--- a/packages/ibm-products-web-components/examples/set-of-tags/package.json
+++ b/packages/ibm-products-web-components/examples/set-of-tags/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "rimraf": "^3.0.2",
     "typescript": "^5.5.3",
-    "vite": "5.4.19",
+    "vite": "^5.4.20",
     "vite-plugin-lit-css": "^2.1.0"
   }
 }
