--- a/.github/workflows/code-connect.yml
+++ b/.github/workflows/code-connect.yml
@@ -10,4 +10,22 @@ jobs:
     name: Code Connect
     runs-on: ubuntu-latest
     steps:
-      - run: npx figma connect publish
+      - name: Checkout
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - name: Setup Node.js
+        uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v5.0.0
+        with:
+          node-version: '20.19.5'
+          cache: yarn
+      - name: Cache dependencies
+        uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # 4.2.4
+        with:
+          path: '**/node_modules'
+          key: build-modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+      - name: Install
+        run: yarn
+      - name: Run publish
+        working-directory: packages/ibm-products
+        run: npx figma connect publish
+        env:
+          FIGMA_ACCESS_TOKEN: ${{ secrets.FIGMA_ACCESS_TOKEN }}
