--- a/packages/ibm-products-web-components/examples/checklist/package.json
+++ b/packages/ibm-products-web-components/examples/checklist/package.json
@@ -12,6 +12,7 @@
     "clean": "rimraf node_modules dist .cache"
   },
   "dependencies": {
+    "@carbon/web-components": "^2.37.0",
     "@carbon/ibm-products-web-components": "^0.24.1",
     "lit": "^3.2.1",
     "sass": "^1.64.1"
