--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -77,9 +77,10 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-typescript": "^12.1.1",
-    "@storybook/addon-docs": "^9.0.5",
-    "@storybook/addon-links": "^9.0.0",
-    "@storybook/web-components-vite": "^9.0.12",
+    "@storybook/addon-a11y": "^9.1.8",
+    "@storybook/addon-docs": "^9.1.8",
+    "@storybook/addon-links": "^9.1.8",
+    "@storybook/web-components-vite": "^9.1.8",
     "@types/jest": "^29.5.13",
     "@vitest/browser": "^3.2.0",
     "@vitest/coverage-v8": "^3.2.0",
@@ -97,7 +98,8 @@
     "rollup": "^4.27.3",
     "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.80.6",
-    "storybook": "^9.0.5",
+    "storybook": "^9.1.8",
+    "storybook-addon-accessibility-checker": ">=9.2.0-rc.0",
     "tslib": "^2.8.1",
     "typescript": "^5.5.3",
     "vite": "^7.0.0",
