--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -62,6 +62,7 @@
     "@ibm/telemetry-js": "^1.10.2",
     "@lit-labs/signals": "^0.1.2",
     "@lit/context": "^1.1.5",
+    "@lottiefiles/lottie-player": "^2.0.12",
     "lit": "^3.1.0"
   },
   "devDependencies": {
