--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -52,45 +52,24 @@ jobs:
       - name:
           Run @ibm/telemetry-js-config-generator to regenerate ibm-products telemetry config file
         if: github.event.inputs.dry-run == 'true'
-        working-directory: ./packages/ibm-products
         run: |
-          yarn telemetry-config
-
-      - name:
-          Run @ibm/telemetry-js-config-generator to regenerate telemetry ibm-products-web-components config file
-        if: github.event.inputs.dry-run == 'true'
-        working-directory: ./packages/ibm-products-web-components
-        run: |
-          yarn telemetry-config
+          yarn release-telemetry
 
       # This can be removed once @ibm/telemetry-js-config-generator has params to set the js scope
       - name: Add js scope to ibm-products telemetry config
         if: github.event.inputs.dry-run == 'true'
-        working-directory: ./packages/ibm-products
         run: |
           echo "  js:
               functions: {}
-              tokens: null" >> telemetry.yml
-          if [ -z "$(git status --porcelain)" ]; then
-            echo "Mirror is clean, exiting..."
-          else
-            git add telemetry.yml
-            git commit -m "chore(telemetry): update ibm-products telemetry config"
-            git push origin
-          fi
-
-      - name: Add js scope to ibm-products-web-components telemetry config
-        if: github.event.inputs.dry-run == 'true'
-        working-directory: ./packages/ibm-products-web-components
-        run: |
+              tokens: null" >> packages/ibm-products/telemetry.yml
           echo "  js:
               functions: {}
-              tokens: null" >> telemetry.yml
+              tokens: null" >> packages/ibm-products-web-components/telemetry.yml
           if [ -z "$(git status --porcelain)" ]; then
             echo "Mirror is clean, exiting..."
           else
-            git add telemetry.yml
-            git commit -m "chore(telemetry): update ibm-products-web-components telemetry config"
+            git add '**/telemetry.yml'
+            git commit -m "chore(telemetry): update telemetry configs"
             git push origin
           fi
 
