--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -62,10 +62,10 @@
     "@ibm/telemetry-js": "^1.10.2",
     "@lit-labs/signals": "^0.1.2",
     "@lit/context": "^1.1.5",
-    "@lottiefiles/lottie-player": "^2.0.12",
     "lit": "^3.1.0"
   },
   "devDependencies": {
+    "@aarsteinmedia/dotlottie-player": "^6.0.5",
     "@blockquote/rollup-plugin-externalize-source-dependencies": "^1.0.0",
     "@carbon/icon-helpers": "^10.65.0",
     "@carbon/icons": "^11.66.0",
@@ -81,9 +81,11 @@
     "@storybook/addon-docs": "^9.0.5",
     "@storybook/addon-links": "^9.0.0",
     "@storybook/web-components-vite": "^9.0.12",
+    "@types/add": "^2",
     "@types/jest": "^29.5.13",
     "@vitest/browser": "^3.2.0",
     "@vitest/coverage-v8": "^3.2.0",
+    "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
     "c8": "^10.1.3",
     "cssnano": "^7.0.6",
