--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -98,6 +98,7 @@
     "react-dom": "^19.1.0",
     "rimraf": "^6.0.1",
     "rollup": "^4.35.0",
+    "rollup-plugin-preserve-directives": "^0.4.0",
     "rollup-plugin-strip-banner": "^3.1.0",
     "sass": "^1.85.1",
     "storybook": "^9.0.8",
