--- a/packages/ibm-products/figma.config.json
+++ b/packages/ibm-products/figma.config.json
@@ -1,6 +1,10 @@
 {
   "codeConnect": {
-    "include": ["packages/ibm-products/src/**/*.{tsx,jsx}"],
+    "parser": "react",
+    "importPaths": {
+      "packages/ibm-products/src/*": "@carbon/ibm-products"
+    },
+    "include": ["src/**"],
     "label": "React",
     "interactiveSetupFigmaFileUrl": "https://www.figma.com/design/0F9dKH2abAd7gSfvnacfWf/-v11--IBM-Products-%E2%80%93-Carbon-Design-System?m=auto&node-id=4395-242870&t=yYYqoolgX9f4bm4c-1"
   }
