--- a/.github/workflows/code-connect.yml
+++ b/.github/workflows/code-connect.yml
@@ -1,16 +1,19 @@
-name: Figma Code Connect, publish
+name: Figma Code Connect, publish both React and Web component configs
 
 on:
   push:
-    paths:
-      - src/packages/ibm-products/**/*.figma.tsx
     branches:
       - main
 
 jobs:
   code-connect:
-    name: Code Connect
+    name: Code Connect - ${{ matrix.package }}
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        package:
+          - ibm-products
+          - ibm-products-web-components
     steps:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
@@ -27,7 +30,7 @@ jobs:
       - name: Install
         run: yarn
       - name: Run publish
-        working-directory: packages/ibm-products
+        working-directory: packages/${{ matrix.package }}
         run: npx figma connect publish
         env:
           FIGMA_ACCESS_TOKEN: ${{ secrets.FIGMA_ACCESS_TOKEN }}
