chore: wc storybook welcome page (#8345)
* chore: wc storybook welcome page

* fix: style issue

* fix: autodocs

* fix: remove styling

* fix: use lightweight lottie player

* fix: remove add dep

* fix: remove v2

* fix: styling

--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -65,6 +65,7 @@
     "lit": "^3.1.0"
   },
   "devDependencies": {
+    "@aarsteinmedia/dotlottie-player": "^6.0.5",
     "@blockquote/rollup-plugin-externalize-source-dependencies": "^1.0.0",
     "@carbon/icon-helpers": "^10.65.0",
     "@carbon/icons": "^11.66.0",
