--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -59,6 +59,7 @@
     "@carbon/ibm-products-styles": "^2.72.0",
     "@carbon/styles": "1.89.0",
     "@carbon/web-components": "2.37.0",
+    "@figma/code-connect": "^1.3.6",
     "@ibm/telemetry-js": "^1.10.2",
     "@lit-labs/signals": "^0.1.2",
     "@lit/context": "^1.1.5",
