--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -70,6 +70,7 @@
     "@carbon/icon-helpers": "^10.65.0",
     "@carbon/icons": "^11.66.0",
     "@carbon/motion": "^11.34.0",
+    "@figma/code-connect": "^1.3.6",
     "@ibm/telemetry-js-config-generator": "^2.1.0",
     "@mordech/vite-lit-loader": "^0.37.0",
     "@open-wc/testing": "^4.0.0",
