--- a/.github/workflows/release-v1.yml
+++ b/.github/workflows/release-v1.yml
@@ -3,13 +3,14 @@ name: v1 release # Builds and releases @carbon/v10 supported version of @carbon/
 on:
   workflow_dispatch:
 
+# Required for OIDC publishing https://docs.npmjs.com/trusted-publishers
+permissions:
+  id-token: write
+  contents: write
+
 jobs:
   Release_v1:
     runs-on: ubuntu-latest
-    # Recommended by npm for publishing with provenance https://docs.npmjs.com/generating-provenance-statements
-    permissions:
-      id-token: write
-      contents: write
 
     steps:
       - name: Checkout
