--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -12,12 +12,14 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+# Required for OIDC publishing https://docs.npmjs.com/trusted-publishers
+permissions:
+  id-token: write
+  contents: write
+
 jobs:
   release-canary:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: write
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
