--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -117,28 +117,28 @@ jobs:
 
       - name: Publish full minor release (ie. v1.x.0)
         if: |
-          github.event.inputs.type == 'full minor release' &&
+          github.event.inputs.type == 'full release' &&
           github.event.inputs.semver-type == 'minor'
         run: |
           yarn lerna publish minor --conventional-graduate $(echo "${{ env.PUBLISH }}")
 
       - name: Publish first minor RC (ie. v1.x.0-rc.0)
         if: |
-          github.event.inputs.type == 'first minor rc' &&
+          github.event.inputs.type == 'first rc' &&
           github.event.inputs.semver-type == 'minor'
         run: |
           yarn lerna publish preminor --conventional-prerelease --preid rc --pre-dist-tag next $(echo "${{ env.PUBLISH }}")
 
       - name: Publish full patch release (ie. v1.0.x)
         if: |
-          github.event.inputs.type == 'full patch release' &&
+          github.event.inputs.type == 'full release' &&
           github.event.inputs.semver-type == 'patch'
         run: |
           yarn lerna publish patch --conventional-graduate $(echo "${{ env.PUBLISH }}")
 
       - name: Publish first patch RC (ie. v1.0.x-rc.0)
         if: |
-          github.event.inputs.type == 'first patch rc' &&
+          github.event.inputs.type == 'first rc' &&
           github.event.inputs.semver-type == 'patch'
         run: |
           yarn lerna publish prepatch --conventional-prerelease --preid rc --pre-dist-tag next $(echo "${{ env.PUBLISH }}")
