--- a/.github/workflows/release-start.yml
+++ b/.github/workflows/release-start.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
     inputs:
       semver-type:
-        required: true
         description: 'Specify the type of semver release'
+        required: true
         type: choice
         default: minor
         options:
@@ -16,7 +16,9 @@ on:
           - patch
       type:
         description: 'Specify the type of release (stable, preview, etc.)'
+        required: true
         type: choice
+        default: first rc
         # Full release (ie. v2.0.0 -> v2.1.0)
         # First RC (ie. v2.0.0 -> v2.1.0-rc.0)
         # Subsequent RC (ie v2.1.0-rc.0 -> v2.1.0-rc.1)
@@ -36,6 +38,7 @@ jobs:
     # trigger the input data to the `release-base` workflow and trigger it
     uses: ./.github/workflows/release-base.yml
     with:
+      semver-type: ${{ inputs.type }}
       type: ${{ inputs.type }}
       dry-run: ${{ inputs.dry-run }}
     secrets: inherit
