--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -9,15 +9,19 @@ concurrency:
 on:
   workflow_call:
     inputs:
-      type:
-        required: true
+      semver-type:
         type: string
-        default: first minor rc
-      dry-run:
+        default: minor
         required: true
-        description: 'Run dry run?'
+      type:
+        type: string
+        default: first rc
+        required: true
+      dry-run:
         type: boolean
         default: true
+        required: true
+        description: 'Run dry run?'
 
 # Required for OIDC publishing https://docs.npmjs.com/trusted-publishers
 permissions:
@@ -117,27 +121,36 @@ jobs:
           fi
 
       - name: Publish full minor release (ie. v1.x.0)
-        if: github.event.inputs.type == 'full minor release'
+        if: |
+          github.event.inputs.type == 'full release' &&
+          github.event.inputs.semver-type == 'minor'
         run: |
           yarn lerna publish minor --conventional-graduate $(echo "${{ env.PUBLISH }}")
 
       - name: Publish first minor RC (ie. v1.x.0-rc.0)
-        if: github.event.inputs.type == 'first minor rc'
+        if: |
+          github.event.inputs.type == 'first rc' &&
+          github.event.inputs.semver-type == 'minor'
         run: |
           yarn lerna publish preminor --conventional-prerelease --preid rc --pre-dist-tag next $(echo "${{ env.PUBLISH }}")
 
       - name: Publish full patch release (ie. v1.0.x)
-        if: github.event.inputs.type == 'full patch release'
+        if: |
+          github.event.inputs.type == 'full release' &&
+          github.event.inputs.semver-type == 'patch'
         run: |
           yarn lerna publish patch --conventional-graduate $(echo "${{ env.PUBLISH }}")
 
       - name: Publish first patch RC (ie. v1.0.x-rc.0)
-        if: github.event.inputs.type == 'first patch rc'
+        if: |
+          github.event.inputs.type == 'first rc' &&
+          github.event.inputs.semver-type == 'patch'
         run: |
           yarn lerna publish prepatch --conventional-prerelease --preid rc --pre-dist-tag next $(echo "${{ env.PUBLISH }}")
 
       - name: Publish subsequent RC (ie. v1.0.0-rc.x)
-        if: github.event.inputs.type == 'subsequent rc'
+        if: |
+          github.event.inputs.type == 'subsequent rc'
         run: |
           yarn lerna publish --conventional-prerelease --preid rc --pre-dist-tag next $(echo "${{ env.PUBLISH }}")
 
@@ -152,9 +165,7 @@ jobs:
       # After successfully publishing a full release, trigger the production storybook environment deployment workflow.
       # Pass in the release branch name to the storybook deployment job so it build off the release branch
       - name: Dispatch production storybook deployment workflow
-        if:
-          ${{ (github.event.inputs.type  == 'full minor release') ||
-          (github.event.inputs.type  == 'full patch release') }}
+        if: github.event.inputs.type  == 'full release'
         uses: peter-evans/repository-dispatch@v4
         with:
           event-type: deploy-latest-storybook
