fix: moved feature flag merge to FeatureFlags/index

--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -17,8 +17,7 @@
   "sideEffects": [
     "**/global/js/utils/props-helper.js",
     "**/*.css",
-    "**/*.scss",
-    "**/feature-flags.js"
+    "**/*.scss"
   ],
   "files": [
     "css",
