--- a/config/storybook-addon-carbon-theme/package.json
+++ b/config/storybook-addon-carbon-theme/package.json
@@ -4,6 +4,7 @@
   "version": "2.26.0",
   "license": "Apache-2.0",
   "main": "dist/react.js",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/carbon-design-system/ibm-products.git",
