--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,7 +142,7 @@ jobs:
         run: yarn
       - name: Install browsers
         working-directory: packages/ibm-products-web-components
-        run: yarn playwright install --with-deps
+        run: npx playwright install --with-deps
       - name: Build web-components project
         run: yarn build:packages
       - name: CI tests for products web components
@@ -171,7 +171,7 @@ jobs:
         run: yarn
 
       - name: Install browsers
-        run: yarn playwright install --with-deps
+        run: npx playwright install --with-deps
 
       - name: Build project
         run: yarn build
@@ -190,7 +190,7 @@ jobs:
       - name: Run AVT
         if: github.repository == 'carbon-design-system/ibm-products'
         run: |
-          yarn playwright test --project chromium --grep @avt --shard="${{ matrix.shardIndex }}/${{ matrix.shardTotal }}"
+          npx playwright test --project chromium --grep @avt --shard="${{ matrix.shardIndex }}/${{ matrix.shardTotal }}"
       - name: Stop storybook
         run: kill ${{ steps.storybook.outputs.pid }}
 
@@ -262,7 +262,7 @@ jobs:
       - name: Install
         run: yarn
       - name: Install browsers
-        run: yarn playwright install --with-deps
+        run: npx playwright install --with-deps
       - name: Build project
         run: yarn build
       - name: Run VRT
