--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "audit": "node scripts/audit.js '--environment production' moderate",
-    "avt": "AVT=true yarn playwright test --project chromium --grep @avt",
+    "avt": "AVT=true npx playwright test --project chromium --grep @avt",
     "build": "run-s -s 'build:*' storybook:build",
     "build:packages": "yarn run-all --include-dependencies build",
     "ci-check": "run-s -s 'ci-check:*' storybook:build",
@@ -49,7 +49,7 @@
     "test:c4p": "lerna run --stream --scope @carbon/ibm-products test --",
     "test:c4p:snapshot": "yarn test:c4p-styles styles -u",
     "test:c4p-styles": "lerna run --stream --scope @carbon/ibm-products-styles test --",
-    "test:c4p-wc": "yarn playwright install && lerna run --stream --scope @carbon/ibm-products-web-components test --",
+    "test:c4p-wc": "npx playwright install && lerna run --stream --scope @carbon/ibm-products-web-components test --",
     "spellcheck": "cspell '**' -e './examples' --gitignore --quiet --no-must-find-files",
     "storybook": "cd packages/ibm-products && yarn storybook:start",
     "storybook:build": "cd packages/ibm-products && yarn storybook:build",
