--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -49,7 +49,7 @@
     "postinstall": "ibmtelemetry --config=telemetry.yml",
     "preview": "vite preview",
     "storybook": "storybook dev -p 3000",
-    "test": "vitest run",
+    "test": "yarn playwright install --with-deps && vitest run",
     "wca": "web-component-analyzer analyze src --outFile custom-elements.json",
     "coverage": "vitest run --coverage",
     "telemetry-config": "ibmtelemetry-config generate --wc --id 8a79d901-a9c0-4672-94a4-fa8eea139832 --endpoint https://www-api.ibm.com/ibm-telemetry/v1/metrics --files ./src/components"
