--- a/config/storybook-addon-carbon-theme/package.json
+++ b/config/storybook-addon-carbon-theme/package.json
@@ -52,8 +52,7 @@
     "@storybook/components": "^8.6.6",
     "@storybook/core-events": "^8.6.6",
     "@storybook/theming": "^8.6.6",
-    "core-js": "^3.41.0",
-    "global": "^4.4.0"
+    "core-js": "^3.41.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
