--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -57,8 +57,8 @@
   "dependencies": {
     "@carbon-labs/wc-empty-state": "^0.11.0",
     "@carbon/ibm-products-styles": "^2.74.0",
-    "@carbon/styles": "1.89.0",
-    "@carbon/web-components": "2.37.0",
+    "@carbon/styles": "^1.93.1",
+    "@carbon/web-components": "2.41.1",
     "@ibm/telemetry-js": "^1.10.2",
     "@lit-labs/signals": "^0.1.2",
     "@lit/context": "^1.1.5",
