--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -67,6 +67,7 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
+    "@carbon/styles": "^1.93.1",
     "@figma/code-connect": "^1.3.5",
     "@ibm/telemetry-js-config-generator": "^2.0.1",
     "@percy/cli": "^1.31.0",
