--- a/packages/ibm-products-web-components/examples/delete-and-remove/package.json
+++ b/packages/ibm-products-web-components/examples/delete-and-remove/package.json
@@ -11,6 +11,7 @@
     "dev": "vite"
   },
   "dependencies": {
+    "@carbon/icons": "^11.70.0",
     "@carbon/web-components": "^2.37.0",
     "lit": "^3.1.4"
   },
