--- a/packages/ibm-products-web-components/examples/page-header/package.json
+++ b/packages/ibm-products-web-components/examples/page-header/package.json
@@ -13,9 +13,10 @@
   },
   "dependencies": {
     "@carbon/ibm-products-web-components": "latest",
+    "@carbon/icons": "^11.70.0",
     "@carbon/web-components": "^2.37.0",
     "lit": "^3.2.1",
-    "sass": "^1.93.2"
+    "sass": "^1.64.1"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
