--- a/packages/ibm-products-web-components/examples/set-of-breadcrumbs/package.json
+++ b/packages/ibm-products-web-components/examples/set-of-breadcrumbs/package.json
@@ -13,10 +13,11 @@
   },
   "dependencies": {
     "@carbon/ibm-products-styles": "^2.69.0",
+    "@carbon/icons": "^11.70.0",
     "@carbon/styles": "1.89.0",
     "@carbon/web-components": "^2.37.0",
     "lit": "^3.2.1",
-    "sass": "^1.93.2"
+    "sass": "^1.64.1"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
