--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -67,6 +67,7 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
+    "@carbon/styles": "^1.93.1",
     "@figma/code-connect": "^1.3.5",
     "@ibm/telemetry-js-config-generator": "^2.0.1",
     "@percy/cli": "^1.31.0",
@@ -108,11 +109,11 @@
   "dependencies": {
     "@babel/runtime": "^7.26.10",
     "@carbon-labs/react-resizer": "^0.10.0",
-    "@carbon/feature-flags": "^0.30.0",
+    "@carbon/feature-flags": "^0.32.0",
     "@carbon/ibm-products-styles": "^2.74.0",
     "@carbon/telemetry": "^0.1.0",
-    "@carbon/utilities": "^0.9.0",
-    "@carbon/utilities-react": "0.12.0",
+    "@carbon/utilities": "^0.10.0",
+    "@carbon/utilities-react": "0.13.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -122,12 +123,12 @@
     "react-window": "^1.8.11"
   },
   "peerDependencies": {
-    "@carbon/grid": "^11.42.0",
-    "@carbon/layout": "^11.40.0",
-    "@carbon/motion": "^11.34.0",
-    "@carbon/react": "^1.90.0",
-    "@carbon/themes": "^11.59.0",
-    "@carbon/type": "^11.46.0",
+    "@carbon/grid": "^11.44.0",
+    "@carbon/layout": "^11.42.0",
+    "@carbon/motion": "^11.36.0",
+    "@carbon/react": "^1.92.1",
+    "@carbon/themes": "^11.61.0",
+    "@carbon/type": "^11.48.0",
     "react": "^16.8.6 || ^17.0.1 || ^18.2.0 || ^19.0.0",
     "react-dom": "^16.8.6 || ^17.0.1 || ^18.2.0 || ^19.0.0"
   }
