--- a/packages/ibm-products-web-components/examples/api-key-modal/package.json
+++ b/packages/ibm-products-web-components/examples/api-key-modal/package.json
@@ -11,6 +11,8 @@
     "dev": "vite"
   },
   "dependencies": {
+    "@carbon/ibm-products-styles": "^2.74.0",
+    "@carbon/icons": "^11.70.0",
     "@carbon/web-components": "^2.39.1",
     "lit": "^3.1.4"
   },
