--- a/packages/ibm-products-web-components/examples/set-of-breadcrumbs/package.json
+++ b/packages/ibm-products-web-components/examples/set-of-breadcrumbs/package.json
@@ -12,11 +12,12 @@
     "clean": "rimraf node_modules dist .cache"
   },
   "dependencies": {
+    "@carbon/icons": "^11.70.0",
     "@carbon/ibm-products-styles": "^2.71.0",
     "@carbon/styles": "1.91.0",
     "@carbon/web-components": "^2.39.1",
     "lit": "^3.2.1",
-    "sass": "^1.93.2"
+    "sass": "^1.64.1"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
