--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ci-check:tests": "run-p -s 'ci-check:test:*'",
     "ci-check:test:c4p": "yarn test:c4p --ci",
     "ci-check:test:c4p:snapshot": "yarn test:c4p:snapshot --ci",
+    "ci-check:test:c4p-wc:build": "lerna run build --scope @carbon/ibm-products-web-components --include-dependencies --stream",
     "ci-check:test:c4p-wc": "yarn test:c4p-wc",
     "ci-check:spellcheck": "yarn spellcheck",
     "clean": "run-p -s 'clean:*' && run-p -s 'clean:finally:*'",
