fix(CreateTearSheet): Modified the useCreateComponentFocus hook (#8076)
* wip

* fix: modified the useCreateComponentFocus hook and how its used in CreateTearSheet and CreateFullPage

* Added back in selectorPrimaryFocus to story element

* snapshot update

* fix(CreateTearsheet): added tests, modified hook to help focus

* Update Tearsheet-test.avt.e2e.js

* Update Tearsheet-test.avt.e2e.js

* Update Tearsheet-test.avt.e2e.js

Missed a commented out line

* merging up main

* Revert "Update Tearsheet-test.avt.e2e.js"

This reverts commit 6fcaef458893ce2cd4465bab610324e01f12227d.

* Reverted babel changes and addressed comments in review

* refactor: removed the plugin-transform-class-static-block babel plugin

* fix: package lock file...

* fix: yarn.lock issues

* fix: fixed e2e test

* chore: updated snapshot

---------

Co-authored-by: Sinta Augustine <sintaaugustine@gmail.com>

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "lint:license:staged": "scripts/check-license.cjs -w",
     "lint:js": "eslint packages --fix",
     "lint:styles": "stylelint '**/*.scss' --fix",
-    "prepare": "husky install",
+    "prepare": "husky",
     "postinstall": "husky",
     "run-all": "lerna run --stream --prefix --loglevel success",
     "release-telemetry": "cd packages/ibm-products && yarn telemetry-config && cd ../ibm-products-web-components && yarn telemetry-config",
