--- a/.github/workflows/deploy-latest.yml
+++ b/.github/workflows/deploy-latest.yml
@@ -21,21 +21,22 @@ jobs:
           fetch-depth: '0'
           ref: ${{ github.event.client_payload.branch }}
 
-      - name: Setup Node.js
-        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
+      - name: Use Node.js version from .nvmrc
+        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903
         with:
-          node-version: '20.x'
-          registry-url: https://registry.npmjs.org
+          node-version-file: '.nvmrc'
           cache: 'yarn'
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --immutable
       - name: Build storybook
         run: |
           yarn build
           yarn storybook-wc:build
       # Set authenticated Git remote
       - name: Set authenticated Git remote
-        run: git remote set-url origin https://git:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+        run:
+          git remote set-url origin https://git:${{
+          secrets.GITHUB_TOKEN}}@github.com/${{ github.repository }}.git
       # Deploy to staging Github Pages using `gh-pages` package
       - name: Prepare latest directory
         run: |
