--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
 
-      - name: Install
-        run: yarn
+      - name: Install dependencies
+        run: yarn install --immutable
 
       - name: Update Carbon packages
         run: |
