--- a/.github/workflows/create-release-tag-and-pr.yml
+++ b/.github/workflows/create-release-tag-and-pr.yml
@@ -67,7 +67,7 @@ jobs:
       # is not affected
 
       - name: Use Node.js version from .nvmrc
-        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903
+        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
         with:
           node-version-file: .'nvmrc'
           cache: 'yarn'
@@ -111,7 +111,7 @@ jobs:
         with:
           fetch-depth: '0'
       - name: Use Node.js version from .nvmrc
-        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903
+        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
         with:
           node-version-file: .'nvmrc'
           cache: 'yarn'
