--- a/.github/workflows/test-example-upgrade.yml
+++ b/.github/workflows/test-example-upgrade.yml
@@ -28,7 +28,7 @@ jobs:
           git config user.name $GITHUB_ACTOR
 
       - name: Use Node.js version from .nvmrc
-        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903
+        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
         with:
           node-version-file: '.nvmrc'
           cache: 'yarn'
