--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@carbon/grid": "^11.45.0",
     "@carbon/layout": "^11.43.0",
     "@carbon/motion": "^11.37.0",
-    "@carbon/react": "1.95.0",
+    "@carbon/react": "^1.95.0",
     "@carbon/themes": "^11.62.0",
     "@carbon/type": "^11.49.0",
     "@commitlint/cli": "^20.0.0",
