--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -48,10 +48,11 @@ jobs:
       - name: Use Node.js version from .nvmrc
         uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
         with:
-          node-version-file: '.nvmrc'
+          node-version: '24.x'
+          registry-url: https://registry.npmjs.org
           cache: 'yarn'
       - name: Install dependencies
-        run: yarn install --immutable
+        run: yarn install
 
       - name:
           Run @ibm/telemetry-js-config-generator to regenerate ibm-products
