fix: delete cache and cache playwright browsers to free up disk

--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -52,7 +52,7 @@ jobs:
           registry-url: https://registry.npmjs.org
           cache: 'yarn'
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --immutable
 
       - name:
           Run @ibm/telemetry-js-config-generator to regenerate ibm-products
