fix: restore npm token and add logs

--- a/.github/workflows/release-start.yml
+++ b/.github/workflows/release-start.yml
@@ -33,7 +33,7 @@ on:
         default: true
 # Required for OIDC publishing https://docs.npmjs.com/trusted-publishers
 permissions:
-  id-token: write
+  # id-token: write
   contents: write
 jobs:
   Release:
