--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -21,11 +21,11 @@ on:
         type: boolean
         default: true
         required: true
-        description: "Run dry run?"
+        description: 'Run dry run?'
 
 # Required for OIDC publishing https://docs.npmjs.com/trusted-publishers
 permissions:
-  id-token: write
+  #id-token: write
   contents: write
 
 jobs:
@@ -37,7 +37,7 @@ jobs:
     steps:
       - uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
         with:
-          fetch-depth: "0"
+          fetch-depth: '0'
           token: ${{ secrets.GH_TOKEN_LERNA }} # https://github.com/lerna/lerna/issues/1957
 
       - name: Free disk space
@@ -51,35 +51,35 @@ jobs:
       - name: Use Node.js version from .nvmrc
         uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
         with:
-          node-version: "24.x"
-          registry-url: https://registry.npmjs.org
-          cache: "yarn"
+          node-version-file: '.nvmrc'
+          cache: 'yarn'
       - name: Install dependencies
         run: yarn install --immutable
 
-      - name: Run @ibm/telemetry-js-config-generator to regenerate ibm-products
+      - name:
+          Run @ibm/telemetry-js-config-generator to regenerate ibm-products
           telemetry config file
         if: github.event.inputs.dry-run == 'true'
         run: |
           yarn release-telemetry
 
       # This can be removed once @ibm/telemetry-js-config-generator has params to set the js scope
-      - name: Add js scope to ibm-products telemetry config
-        if: github.event.inputs.dry-run == 'true'
-        run: |
-          echo "  js:
-              functions: {}
-              tokens: null" >> packages/ibm-products/telemetry.yml
-          echo "  js:
-              functions: {}
-              tokens: null" >> packages/ibm-products-web-components/telemetry.yml
-          if [ -z "$(git status --porcelain)" ]; then
-            echo "Mirror is clean, exiting..."
-          else
-            git add '**/telemetry.yml'
-            git commit -m "chore(telemetry): update telemetry configs"
-            git push origin
-          fi
+      # - name: Add js scope to ibm-products telemetry config
+      #   if: github.event.inputs.dry-run == 'true'
+      #   run: |
+      #     echo "  js:
+      #         functions: {}
+      #         tokens: null" >> packages/ibm-products/telemetry.yml
+      #     echo "  js:
+      #         functions: {}
+      #         tokens: null" >> packages/ibm-products-web-components/telemetry.yml
+      #     if [ -z "$(git status --porcelain)" ]; then
+      #       echo "Mirror is clean, exiting..."
+      #     else
+      #       git add '**/telemetry.yml'
+      #       git commit -m "chore(telemetry): update telemetry configs"
+      #       git push origin
+      #     fi
 
       # For generating playwright json report for avt tests
       # - name: Install browsers
@@ -113,11 +113,19 @@ jobs:
 
       # Set the PUBLISH environment variable to be used later in the Lerna publish command.
       # Lerna has dry run on by default, need to pass in '--yes' flag before it will go ahead and publish.
+
+      - name: Set NPM token
+        run: |
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.CARBON_BOT_NPM_TOKEN }}" >> .npmrc
       - name: Set dry run env variable
         run: |
           if [ "${{ github.event.inputs.dry-run }}" == "false"  ]; then
             echo "PUBLISH=--yes" >> $GITHUB_ENV
           fi
+      - name: Debug npm identity
+        run: npm whoami
+      - name: Debug package visibility
+        run: npm view @carbon/ibm-products-styles version || true
 
       - name: Publish full minor release (ie. v1.x.0)
         if: |
