--- a/config/babel-preset-ibm-cloud-cognitive/package.json
+++ b/config/babel-preset-ibm-cloud-cognitive/package.json
@@ -1,7 +1,7 @@
 {
   "name": "babel-preset-ibm-cloud-cognitive",
   "private": true,
-  "version": "0.39.0-rc.6",
+  "version": "0.38.0",
   "license": "Apache-2.0",
   "main": "index.js",
   "repository": {
