--- a/config/jest-config-ibm-cloud-cognitive/package.json
+++ b/config/jest-config-ibm-cloud-cognitive/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jest-config-ibm-cloud-cognitive",
   "private": true,
-  "version": "1.40.0-rc.6",
+  "version": "1.39.0",
   "license": "Apache-2.0",
   "main": "index.js",
   "repository": {
