--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/ibm-products-web-components",
   "description": "Carbon for IBM Products Web Components",
-  "version": "0.30.0-rc.6",
+  "version": "0.29.0",
   "license": "Apache-2.0",
   "main": "es/index.js",
   "module": "es/index.js",
