--- a/packages/ibm-products-styles/package.json
+++ b/packages/ibm-products-styles/package.json
@@ -49,7 +49,7 @@
     "cross-env": "^10.0.0",
     "glob": "^11.0.1",
     "jest": "^29.7.0",
-    "jest-config-ibm-cloud-cognitive": "^1.40.0-rc.6",
+    "jest-config-ibm-cloud-cognitive": "^1.39.0",
     "jest-environment-jsdom": "^29.7.0",
     "npm-run-all2": "^8.0.0",
     "rimraf": "^6.0.1",
