--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -82,7 +82,7 @@
     "@storybook/react-vite": "^9.0.13",
     "@types/react-table": "^7.7.20",
     "babel-plugin-dev-expression": "^0.2.3",
-    "babel-preset-ibm-cloud-cognitive": "^0.39.0-rc.6",
+    "babel-preset-ibm-cloud-cognitive": "^0.38.0",
     "change-case": "5.4.4",
     "classnames": "^2.5.1",
     "copyfiles": "^2.4.1",
@@ -90,7 +90,7 @@
     "fs-extra": "^11.3.0",
     "glob": "^11.0.1",
     "jest": "^29.7.0",
-    "jest-config-ibm-cloud-cognitive": "^1.40.0-rc.6",
+    "jest-config-ibm-cloud-cognitive": "^1.39.0",
     "jest-environment-jsdom": "^29.7.0",
     "namor": "^1.1.2",
     "npm-run-all2": "^8.0.0",
@@ -110,7 +110,7 @@
     "@babel/runtime": "^7.26.10",
     "@carbon-labs/react-resizer": "^0.10.0",
     "@carbon/feature-flags": "^0.32.0",
-    "@carbon/ibm-products-styles": "^2.77.0-rc.6",
+    "@carbon/ibm-products-styles": "^2.76.0",
     "@carbon/telemetry": "^0.1.0",
     "@carbon/utilities": "^0.13.0",
     "@carbon/utilities-react": "0.16.0",
