feat: openInStackblitz in web components

--- a/packages/ibm-products-web-components/tsconfig.json
+++ b/packages/ibm-products-web-components/tsconfig.json
@@ -27,9 +27,11 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
+    "src/**/*.d.ts",
     "tests/**/*.ts",
     ".storybook/**/*.ts",
-    ".storybook/**/*.tsx"
+    ".storybook/**/*.tsx",
+    "previewer/storyassets.ts"
   ],
   "exclude": [
     "src/**/*.stories.ts",
