feat: remove unwanted change

--- a/packages/ibm-products-web-components/tsconfig.json
+++ b/packages/ibm-products-web-components/tsconfig.json
@@ -29,8 +29,7 @@
     "src/**/*.tsx",
     "tests/**/*.ts",
     ".storybook/**/*.ts",
-    ".storybook/**/*.tsx",
-    "previewer/storyassets.ts"
+    ".storybook/**/*.tsx"
   ],
   "exclude": [
     "src/**/*.stories.ts",
